fixed margin of slider and z-index of hamburger menu

--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ header::before {
     left: 2.5%;
     background-color: rgba(255, 255, 255, 0.9);
     padding: 15px;
+    z-index: 2;
 }
 #hamburger_menu a {
     display: block;
@@ -92,6 +93,7 @@ header::before {
 /* SLIDER */
 #featured-slider {
 	padding: 0 auto;
+    margin-top: 4vh;
 }
 #containerofslider {
 	padding: 70px;
